syntax = "proto3";

package classsrv;

option go_package = "proto;classsrv";

service ClassSrv {
	rpc ReadClassesByAgencyID(ReadClassRequest) returns (ReadClassResponse) {}
	rpc AddClasses(AddClassRequest) returns (AddClassResponse) {}
	rpc UpdateClass(UpdateClassRequest) returns (UpdateClassResponse) {}
	rpc DeleteClass(DeleteClassRequest) returns (DeleteClassResponse) {}
}

message Class {
	string agencyID = 1;
	string classID = 2;
	float price = 3;
	string name = 4;
	string age = 5;
	int32 stuNumber = 6;
	string level = 7;
	int32 sales = 8;
}

message ReadClassRequest {
	string agencyID = 1;
}

message ReadClassResponse {
	int32 status = 1;
	repeated Class classes = 2;
	string msg = 3;
}

message AddClassRequest {
	Class class = 1;
}

message AddClassResponse {
	int32 status = 1;
	string classID = 2;
	string msg = 3;
}

message UpdateClassRequest {
	Class class = 1;
}

message UpdateClassResponse {
	int32 status = 1;
	string msg = 2;
}

message DeleteClassRequest {
	string agencyID = 1;
	string classID = 2;
}

message DeleteClassResponse {
	int32 status = 1;
	string msg = 2;
}
